// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormContent renders properly 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Array [
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <C
    component={[Function]}
    label="Title"
    name="title"
  />
  <Headline
    style={
      Object {
        "marginTop": 25,
      }
    }
  >
    Cards
  </Headline>
  <Fadable
    fade={false}
    key="1"
    onAnimationEnd={[Function]}
  >
    <Flashcard
      onFlashcardDeleted={[Function]}
    >
      <C
        component={[Function]}
        label="Question"
        mode="outlined"
        multiline={true}
        name="questions.0.question"
      />
      <C
        component={[Function]}
        label="Answer"
        mode="outlined"
        multiline={true}
        name="questions.0.answer"
      />
    </Flashcard>
  </Fadable>
</ScrollViewMock>
`;

exports[`FormContent renders properly when there are not any flashcards 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Array [
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <C
    component={[Function]}
    label="Title"
    name="title"
  />
  <Headline
    style={
      Object {
        "marginTop": 25,
      }
    }
  >
    Cards
  </Headline>
  <NoContent />
</ScrollViewMock>
`;

exports[`FormContent renders properly when values are dirty 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Array [
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <C
    component={[Function]}
    label="Title"
    name="title"
  />
  <Headline
    style={
      Object {
        "marginTop": 25,
      }
    }
  >
    Cards
  </Headline>
  <Fadable
    fade={false}
    key="1"
    onAnimationEnd={[Function]}
  >
    <Flashcard
      onFlashcardDeleted={[Function]}
    >
      <C
        autoFocus={true}
        component={[Function]}
        label="Question"
        mode="outlined"
        multiline={true}
        name="questions.0.question"
      />
      <C
        component={[Function]}
        label="Answer"
        mode="outlined"
        multiline={true}
        name="questions.0.answer"
      />
    </Flashcard>
  </Fadable>
</ScrollViewMock>
`;
